cmake_minimum_required(VERSION 3.5)
project(ImageSync)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES main.cpp ImageSyncTools.cpp ImageSyncTools.h KeyValueConfig.h)
add_executable(ImageSync ${SOURCE_FILES})
find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()
find_package(ImageMagick COMPONENTS Magick++)
find_package(Boost COMPONENTS filesystem)
include_directories(${ImageMagick_INCLUDE_DIRS})
include_directories(${Boost_INCLUDE_DIRS})
add_definitions(-DMAGICKCORE_QUANTUM_DEPTH=16)
add_definitions(-DMAGICKCORE_HDRI_ENABLE=0)
target_link_libraries(ImageSync ${ImageMagick_LIBRARIES})
target_link_libraries(ImageSync ${Boost_LIBRARIES})
target_link_libraries(ImageSync ${Boost_filesystem_LIBRARY})